@@ -126,5 +126,6 @@ SCons/Tool/tex.py
 SCons/Tool/tlib.py
 SCons/Tool/yacc.py
 SCons/Tool/zip.py
+SCons/UserTuple.py
 SCons/Util.py
 SCons/Warnings.py
